--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   },
   "dependencies": {
     "babel": "^5.8.23",
+    "babelify": "^6.3.0",
+    "browser-sync": "^2.9.6",
+    "browserify": "^11.1.0",
     "chai": "^3.3.0",
     "d3": "^3.5.6",
     "jsdom": "^3.1.2",
