--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "d3": "^3.5.6",
     "jsdom": "^3.1.2",
     "mocha": "^2.3.3",
+    "update-notifier": "^0.5.0",
     "workshopper": "^2.7.0",
     "workshopper-exercise": "^2.4.0"
   },
