Configure ESLint to ignore what is irrelevant

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
     "extends": "airbnb/base",
 
     "rules": {
-        "indent": [2, 4]
+        "indent": [2, 4],
+        "no-console": [0]
     }
 }
