--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "scripts": {
     "test": "eslint --cache .",
     "start": "node src/index.js",
-    "build": "cp -R src es5 && babel src --out-dir es5 --ignore static",
+    "build": "rm -r es5 && cp -R src es5 && babel src --out-dir es5 --ignore static",
     "prepublish": "npm run build -s"
   }
 }
