Last tweak to test setup

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "test:unit:ci": "mocha --compilers js:babel/register es5/tests",
     "pretest": "npm run lint -s",
     "test": "npm run test:unit -s",
-    "test:ci": "npm run lint -s && npm run test:unit:ci",
+    "test:ci": "npm run test:unit:ci",
     "start": "node src/index.js",
     "build": "rm -rf es5 && cp -R src es5 && babel src --out-dir es5 --ignore=tests,static,**/solution.js",
     "prepublish": "npm run build -s"
