--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "babelify": "^6.3.0",
     "browser-sync": "^2.9.6",
     "browserify": "^11.1.0",
+    "cardinal": "^0.5.0",
     "chai": "^3.3.0",
     "d3": "^3.5.6",
+    "html": "0.0.10",
     "jsdom": "^3.1.2",
     "mocha": "^2.3.3",
     "update-notifier": "^0.5.0",
