Unique command for all CI tests

--- a/package.json
+++ b/package.json
@@ -56,9 +56,10 @@
     "test:unit:watch": "mocha --watch --compilers js:babel/register src/tests",
     "test:unit:coverage": "babel-node ./node_modules/.bin/isparta cover ./node_modules/.bin/_mocha -- src/tests",
     "test:unit:ci": "mocha --compilers js:babel/register es5/tests",
+    "test:output": "./tests.sh",
     "pretest": "npm run lint -s",
     "test": "npm run test:unit -s",
-    "test:ci": "npm run test:unit:ci",
+    "test:ci": "npm run test -s && npm run test:unit:ci -s && npm run test:output -s",
     "start": "node src/index.js",
     "build": "rm -rf es5 && cp -R src es5 && babel src --out-dir es5 --ignore=tests,static,**/solution.js",
     "prepublish": "npm run build -s"
