--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "jsdom": "^3.1.2",
     "mocha": "^2.3.3",
     "update-notifier": "^0.5.0",
-    "workshopper": "^2.7.0",
+    "workshopper": "thibweb/workshopper#latest-msee",
     "workshopper-exercise": "^2.4.0"
   },
   "devDependencies": {
