--- a/package.json
+++ b/package.json
@@ -37,18 +37,16 @@
     "html": "0.0.10",
     "jsdom": "^3.1.2",
     "mocha": "^2.3.3",
+    "sinon": "^1.17.1",
     "update-notifier": "^0.5.0",
     "workshopper": "thibweb/workshopper#latest-msee",
     "workshopper-exercise": "^2.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
-    "chai": "^3.3.0",
     "eslint": "^1.5.0",
     "eslint-config-airbnb": "0.0.8",
-    "isparta": "^3.0.4",
-    "mocha": "^2.3.3",
-    "sinon": "^1.17.1"
+    "isparta": "^3.0.4"
   },
   "scripts": {
     "lint": "eslint --cache .",
