Change Travis email notification settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ before_script:
 
 script:
     - npm run test:ci
+
+notifications:
+    email:
+        on_success: change
+        on_failure: always
