--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,9 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[{package.json,*.yml}]
+indent_size = 2
+
 # Rules for markdown documents.
 [*.md]
 trim_trailing_whitespace = false
