--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "devDependencies": {
     "babel-eslint": "^4.1.3",
     "eslint": "^1.5.0",
-    "eslint-config-airbnb": "0.0.8",
+    "eslint-config-airbnb": "^0.1.0",
     "isparta": "^3.0.4"
   },
   "scripts": {
