Revert "Update to babel 6 with presets"
This reverts commit 1e0e31117c0b5dc0889a6c272a909213ab209054.

--- a/package.json
+++ b/package.json
@@ -27,11 +27,10 @@
   "preferGlobal": true,
   "bin": "./es5/testdrived3.js",
   "dependencies": {
-    "babel-core": "^6.0.20",
-    "babel-preset-es2015": "^6.0.15",
-    "babelify": "^7.2.0",
+    "babel": "^5.8.23",
+    "babelify": "^6.3.0",
     "browser-sync": "^2.9.6",
-    "browserify": "^12.0.1",
+    "browserify": "^11.1.0",
     "cardinal": "^0.5.0",
     "chai": "^3.3.0",
     "d3": "^3.5.6",
@@ -52,10 +51,10 @@
   },
   "scripts": {
     "lint": "eslint --cache .",
-    "test:unit": "mocha --compilers js:babel-core/register src/tests",
-    "test:unit:watch": "mocha --watch --compilers js:babel-core/register src/tests",
+    "test:unit": "mocha --compilers js:babel/register src/tests",
+    "test:unit:watch": "mocha --watch --compilers js:babel/register src/tests",
     "test:unit:coverage": "babel-node ./node_modules/.bin/isparta cover ./node_modules/.bin/_mocha -- src/tests",
-    "test:unit:ci": "mocha --compilers js:babel-core/register es5/tests",
+    "test:unit:ci": "mocha --compilers js:babel/register es5/tests",
     "test:output": "./tests.sh",
     "pretest": "npm run lint -s",
     "test": "npm run test:unit -s",
