--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "workshopper-exercise": "^2.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.1.1",
     "babel-eslint": "^4.1.3",
     "eslint": "^1.5.0",
     "eslint-config-airbnb": "^0.1.0",
@@ -60,7 +59,7 @@
     "test": "npm run test:unit -s",
     "test:ci": "npm run build && npm run test -s && npm run test:unit:ci -s && npm run test:output -s",
     "start": "node src/index.js",
-    "build": "NODE_ENV=production; rm -rf es5 && cp -R src es5 && babel src --out-dir es5 --ignore=tests,static,**/solution.js",
+    "build": "rm -rf es5 && cp -R src es5 && babel src --out-dir es5 --ignore=tests,static,**/solution.js",
     "prepublish": "npm run build -s"
   }
 }
