--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "workshopper"
   ],
   "engines": {
-    "node": ">=4.0"
+    "node": ">=4.0.0"
   },
   "preferGlobal": true,
   "bin": {
@@ -54,7 +54,7 @@
     "lint": "eslint --cache .",
     "test:unit": "mocha --compilers js:babel/register src/tests",
     "test:unit:watch": "mocha --watch --compilers js:babel/register src/tests",
-    "test:unit:coverage": "babel-node ./node_modules/.bin/isparta cover ./node_modules/.bin/_mocha -- src/tests",
+    "test:unit:coverage": "$(npm bin)/isparta cover node_modules/mocha/bin/_mocha -- src/tests",
     "test:unit:ci": "mocha --compilers js:babel/register es5/tests",
     "test:output": "./tests.sh",
     "pretest": "npm run lint -s",
