--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
   "devDependencies": {
     "babel-eslint": "^4.1.3",
     "eslint": "^1.5.0",
-    "eslint-config-airbnb": "^1.0.0",
-    "isparta": "^3.0.4"
+    "eslint-config-airbnb": "^5.0.0",
+    "isparta": "^4.0.0"
   },
   "scripts": {
     "lint": "eslint --cache .",
     "test:unit": "mocha --compilers js:babel/register src/tests",
     "test:unit:watch": "mocha --watch --compilers js:babel/register src/tests",
-    "test:unit:coverage": "$(npm bin)/isparta cover node_modules/mocha/bin/_mocha -- src/tests",
+    "test:unit:coverage": "babel-node $(npm bin)/isparta cover node_modules/mocha/bin/_mocha -- src/tests",
     "test:unit:ci": "mocha --compilers js:babel/register es5/tests",
     "test:output": "./tests.sh",
     "pretest": "npm run lint -s",
