--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "babel": "^5.8.23",
     "babelify": "^6.3.0",
     "browser-sync": "^2.9.6",
-    "browserify": "^11.1.0",
-    "cardinal": "^0.5.0",
+    "browserify": "^13.0.0",
     "chai": "^3.3.0",
+    "console-highlight": "^0.1.0",
     "d3": "^3.5.6",
     "html": "0.0.10",
     "jsdom": "^8.0.2",
     "mocha": "^2.3.3",
     "sinon": "^1.17.1",
-    "update-notifier": "^0.5.0",
+    "update-notifier": "^0.6.0",
     "workshopper": "thibweb/workshopper#latest-msee",
     "workshopper-exercise": "^2.4.0"
   },
